@@ -24,7 +24,8 @@ CGUIComboBox::CGUIComboBox(IGUIEnvironment* environment, IGUIElement* parent,
 	s32 id, core::rect<s32> rectangle)
 	: IGUIComboBox(environment, parent, id, rectangle),
 	ListButton(0), SelectedText(0), ListBox(0), LastFocus(0),
-	Selected(-1), HAlign(EGUIA_UPPERLEFT), VAlign(EGUIA_CENTER), MaxSelectionRows(5), HasFocus(false)
+	Selected(-1), HAlign(EGUIA_UPPERLEFT), VAlign(EGUIA_CENTER), MaxSelectionRows(5), HasFocus(false),
+	ActiveFont(0)
 {
 	#ifdef _DEBUG
 	setDebugName("CGUIComboBox");
@@ -384,6 +385,16 @@ void CGUIComboBox::draw()
 		return;
 
 	IGUISkin* skin = Environment->getSkin();
+
+	// font changed while the listbox is open?
+	if ( ActiveFont != skin->getFont() && ListBox )
+	{
+		// close and re-open to use new font-size
+		openCloseMenu();
+		openCloseMenu();
+	}
+
+
 	IGUIElement *currentFocus = Environment->getFocus();
 	if (currentFocus != LastFocus)
 	{
@@ -441,9 +452,9 @@ void CGUIComboBox::openCloseMenu()
 		if (h == 0)
 			h = 1;
 
-		IGUIFont* font = skin->getFont();
-		if (font)
-			h *= (font->getDimension(L"A").Height + 4);
+		ActiveFont = skin->getFont();
+		if (ActiveFont)
+			h *= (ActiveFont->getDimension(L"A").Height + 4);
 
 		// open list box
 		core::rect<s32> r(0, AbsoluteRect.getHeight(),
